--- a/h-charity-ui/src/app/modules/auth/components/register/register.component.html
+++ b/h-charity-ui/src/app/modules/auth/components/register/register.component.html
@@ -1,16 +1,9 @@
-<div
-  class="surface-ground flex align-items-center justify-content-center overflow-hidden"
->
+<div class="surface-ground flex align-items-center justify-content-center overflow-hidden">
   <div class="flex flex-column align-items-center justify-content-center">
-    <img
-      src="assets/{{
+    <img src="assets/{{
         layoutService.config().colorScheme === 'light' ? 'logo' : 'logo-white'
-      }}.png"
-      alt="h-charity-ui logo"
-      class="mb-5 w-6rem flex-shrink-0"
-    />
-    <div
-      style="
+      }}.png" alt="h-charity-ui logo" class="mb-5 w-6rem flex-shrink-0" />
+    <div style="
         border-radius: 56px;
         padding: 0.3rem;
         background: linear-gradient(
@@ -18,12 +11,8 @@
           var(--primary-color) 10%,
           rgba(33, 150, 243, 0) 30%
         );
-      "
-    >
-      <div
-        class="w-full surface-card py-8 px-5 sm:px-8"
-        style="border-radius: 53px"
-      >
+      ">
+      <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius: 53px">
         <div class="text-center mb-5">
           <div class="text-900 text-3xl font-medium mb-3">Register!</div>
           <span class="text-600 font-medium">Let's get started</span>
@@ -31,96 +20,122 @@
 
         <form [formGroup]="registrationForm" (ngSubmit)="register()">
           <div class="flex flex-column gap-2">
-            <label for="username" class="block text-900 text-xl font-medium"
-              >Username</label
-            >
-            <input
-              id="username"
-              type="text"
-              formControlName="username"
-              placeholder="Username"
-              pInputText
-              class="w-full md:w-30rem"
-              style="padding: 1rem"
-            />
 
-            <small
-              *ngIf="username.invalid && (username.dirty || username.touched)"
-              id="username-help"
-              class="mb-5 error-color"
-            >
-              Username is required and must be at least 3 characters long
+            <label for="fullname" class="block text-900 text-xl font-medium">Full Name</label>
+            <input id="fullname" type="text" formControlName="fullName" placeholder="Full Name" pInputText
+              class="w-full md:w-30rem" style="padding: 1rem"
+              [ngClass]="{'ng-invalid ng-dirty' : registrationForm.controls['fullName'].touched && (registrationForm.controls['fullName'].errors?.['required'] || registrationForm.controls['fullName'].errors?.['pattern'])}" />
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['fullName'].touched && registrationForm.controls['fullName'].errors?.['required']">
+              Full Name is required.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['fullName'].touched && registrationForm.controls['fullName'].errors?.['pattern']">
+              Only alphabets are allowed.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['fullName'].touched && registrationForm.controls['fullName'].errors?.['minlength']">
+              Full Name must be at least 3 characters long.
             </small>
 
-            <label for="email" class="block text-900 text-xl font-medium"
-              >Email</label
-            >
-            <input
-              id="email"
-              type="text"
-              formControlName="email"
-              placeholder="Email"
-              pInputText
-              class="w-full md:w-30rem"
-              style="padding: 1rem"
-            />
-            <small
-              *ngIf="email.invalid && (email.dirty || email.touched)"
-              id="email-help"
-              class="mb-5 error-color"
-            >
-              Enter a valid email address
+            <label for="username" class="block text-900 text-xl font-medium">User Name</label>
+            <input id="username" type="text" formControlName="username" placeholder="Username" pInputText
+              class="w-full md:w-30rem" style="padding: 1rem"
+              [ngClass]="{'ng-invalid ng-dirty' : registrationForm.controls['username'].touched && (registrationForm.controls['username'].errors?.['required'] || registrationForm.controls['username'].errors?.['pattern'])}" />
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['username'].touched && registrationForm.controls['username'].errors?.['required']">
+              Username is required.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['username'].touched && registrationForm.controls['username'].errors?.['pattern']">
+              Only alphabets are allowed.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['username'].touched && registrationForm.controls['username'].errors?.['minlength']">
+              Username must be at least 3 characters long.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['username'].touched && registrationForm.controls['username'].errors?.['usernameTaken']">
+              Username is already taken.
             </small>
 
-            <label for="password1" class="block text-900 font-medium text-xl"
-              >Password</label
-            >
-            <p-password
-              id="password"
-              formControlName="password"
-              placeholder="Password"
-              [toggleMask]="true"
+            <label for="password" class="block text-900 font-medium text-xl">Password</label>
+            <p-password id="password" formControlName="password" placeholder="Password" [toggleMask]="true"
               inputStyleClass="w-full p-3 md:w-30rem"
-            ></p-password>
-            <small
-              *ngIf="password.invalid && (password.dirty || password.touched)"
-              id="password-help"
-              class="mb-5 error-color"
-            >
-              Password is required and must be at least 6 characters long
+              [ngClass]="{'ng-invalid ng-dirty' : registrationForm.controls['password'].touched && (registrationForm.controls['password'].errors?.['required'] || registrationForm.controls['password'].errors?.['pattern'] || registrationForm.controls['password'].errors?.['minlength'])}">
+            </p-password>
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['password'].touched && registrationForm.controls['password'].errors?.['required']">
+              Password is required.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['password'].touched && registrationForm.controls['password'].errors?.['minlength']">
+              Password must be at least 6 characters long.
+            </small>
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['password'].touched && registrationForm.controls['password'].errors?.['pattern']">
+              Password must contain alphabets, numbers, and special characters.
             </small>
 
-            <div
-              class="flex align-items-center justify-content-between mb-5 gap-5"
-            >
+            <label for="confirmPassword" class="block text-900 font-medium text-xl">Confirm Password</label>
+            <p-password id="confirmPassword" formControlName="confirmPassword" placeholder="Confirm Password"
+              [toggleMask]="true" inputStyleClass="w-full p-3 md:w-30rem"
+              [ngClass]="{'ng-invalid ng-dirty' : registrationForm.controls['confirmPassword'].touched && registrationForm.hasError('passwordMismatch')}">
+            </p-password>
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['confirmPassword'].touched && registrationForm.hasError('passwordMismatch')">
+              Passwords do not match.
+            </small>
+
+            <label for="email" class="block text-900 text-xl font-medium">Email</label>
+            <input id="email" type="text" formControlName="email" placeholder="Email" pInputText
+              class="w-full md:w-30rem" style="padding: 1rem"
+              [ngClass]="{'ng-invalid ng-dirty' : registrationForm.controls['email'].touched && (registrationForm.controls['email'].errors?.['required'] || registrationForm.controls['email'].errors?.['email'])}">
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['email'].touched && registrationForm.controls['email'].errors?.['required']">
+              Email is required.
+            </small>
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['email'].touched && registrationForm.controls['email'].errors?.['email']">
+              Enter a valid email address.
+            </small>
+
+
+            <label for="number" class="block text-900 text-xl font-medium">Contact Number</label>
+            <input id="number" type="text" formControlName="number" placeholder="Contact Number" pInputText
+              class="w-full md:w-30rem" style="padding: 1rem"
+              [ngClass]="{'ng-invalid ng-dirty' : registrationForm.controls['number'].touched && (registrationForm.controls['number'].errors?.['required'] || registrationForm.controls['number'].errors?.['pattern'])}" />
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['number'].touched && registrationForm.controls['number'].errors?.['required']">
+              Contact Number is required.
+            </small>
+
+            <small class="ng-dirty ng-invalid" style="color: red;"
+              *ngIf="registrationForm.controls['number'].touched && registrationForm.controls['number'].errors?.['pattern']">
+              Enter a valid mobile number (10 digits).
+            </small>
+            <div class="flex align-items-center justify-content-between mb-5 gap-5">
               <div class="flex align-items-center">
-                <p-checkbox
-                  id="rememberme"
-                  [binary]="true"
-                  styleClass="mr-2"
-                  formControlName="rememberme"
-                ></p-checkbox>
-                <label for="termsAndConditions"
-                  >I have read the
-                  <a
-                    class="font-medium no-underline ml-2 text-right cursor-pointer"
-                    style="color: var(--primary-color)"
-                    >Terms and Conditions</a
-                  ></label
-                >
+                <p-checkbox id="rememberme" [binary]="true" styleClass="mr-2" formControlName="rememberme"></p-checkbox>
+                <label for="termsAndConditions">I have read the
+                  <a class="font-medium no-underline ml-2 text-right cursor-pointer"
+                    style="color: var(--primary-color)">Terms and Conditions</a></label>
               </div>
-              <a
-                class="font-medium no-underline ml-2 text-right cursor-pointer"
-                style="color: var(--primary-color)"
-                >Forgot password?</a
-              >
+
+              <a class="font-medium no-underline ml-2 text-right cursor-pointer"
+                style="color: var(--primary-color)">Forgot password?</a>
             </div>
-            <button
-              pButton
-              pRipple
-              label="Sign Up"
-              class="w-full p-3 text-xl"
-            ></button>
+
+            <a class="font-medium no-underline ml-2 text-right cursor-pointer"
+              style="color: var(--primary-color)">Login?</a>
+            <button pButton pRipple label="Sign Up" class="w-full p-3 text-xl"></button>
           </div>
         </form>
       </div>
